Fixed event description text wrapping

--- a/src/routes/SingleEvent/SingleEvent.scss
+++ b/src/routes/SingleEvent/SingleEvent.scss
@@ -10,7 +10,7 @@
   }
 
   .description {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   .event-heading {
